--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   http: any
+  firebase_database: ^3.1.3
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
