--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   http: any
   firebase_database: ^3.1.3
+  rxdart: ^0.23.1
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
