--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.0
 
 environment:
   sdk: ">=2.1.0 <3.0.0"
@@ -25,6 +25,8 @@ dependencies:
   http: any
   firebase_database: ^3.1.3
   rxdart: ^0.23.1
+  get_version: ^0.2.1
+  url_launcher: ^5.4.2
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
