added app share feature

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   rxdart: ^0.23.1
   get_version: ^0.2.1
   url_launcher: ^5.4.2
+  share: ^0.6.3+6
   cupertino_icons: ^0.1.2
 
 dev_dependencies:
