--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,7 @@
 name: corona_tracker
-description: A new Flutter project.
+description: App to track covid-19.
+authors:
+  - Ritesh Kant
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -20,8 +22,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   http: any
   firebase_database: ^3.1.3
   rxdart: ^0.23.1
